--- a/public/css/app.css
+++ b/public/css/app.css
@@ -134,6 +134,10 @@ h2.title span {
     mix-blend-mode: lumino1sity !important;
 }
 
+main.big-layout.product-layout{
+    background-image: none;
+}
+
 .layout {
     /* background: url('/images/BG-items.webp'); */
     /* background-size: cover;
