--- a/public/dpc-web/css/product-fabric-design.css
+++ b/public/dpc-web/css/product-fabric-design.css
@@ -833,6 +833,8 @@ footer .footer-bottom p {
         display: flex;
         text-align: start;
         margin-left: -10vw;
+        width: 36px;
+        height: 40px;
     }
     section.header #contact{
         display: none;
@@ -929,7 +931,7 @@ footer .footer-bottom p {
         background-color: #F7F5F3;
         color: #3B3229;
         z-index: 999;
-        top: 90vh;
+        top: 90dvh;
         left : 38vw;
         position: fixed;
     }
@@ -1041,6 +1043,11 @@ footer .footer-bottom p {
     .body-menu .a1, .a2, .a3{
         width: 300px;
     }
+    .header-menu .logo img{
+        width: 36px;
+        height: 40px;
+        margin-left: -6vw;
+    }
 
     /************************** search-area ******************************/
 
@@ -1073,7 +1080,11 @@ footer .footer-bottom p {
         justify-content: flex-start;
         padding: 0;
     }
-
+    .header-search .logo img{
+        width: 36px;
+        height: 40px;
+        margin-left: -6vw;
+    }
     .search-area .body-search {
         margin: 10vh 10vw;
     }
@@ -1140,7 +1151,7 @@ footer .footer-bottom p {
         top: 5vh;
         left: 3vw;
         width: 100%;
-        height: 82vh;
+        height: 82dvh;
         overflow: scroll;
     }
     .layout .filter-bar .x-close, .clear-div{
@@ -1212,11 +1223,11 @@ footer .footer-bottom p {
         width: 93vw;
         margin-bottom: 10vh;
         position: fixed;
-        top: 90vh;
+        top: 90dvh;
     }
     .filter-bar .container #arrow{
         position: fixed;
-        top: 92.5vh;
+        top: 92.5dvh;
         left: 80vw;
         margin-top: 0px;
     }
