--- a/public/dpc-web/css/product-fabric-detail.css
+++ b/public/dpc-web/css/product-fabric-detail.css
@@ -119,7 +119,13 @@ h2.title span {
 .top_head .menu_right {
     gap: 24px;
 }
+.header .logo #img-arrow-left{
+    display: none;
+}
 
+.header-temp{
+    display: none;
+}
 
 .body_head {
     padding: 140px 0 75px;
@@ -159,6 +165,9 @@ h2.title span {
     background-size: cover;
     background-repeat: no-repeat;
 }
+.detail-fabric .container .img-detail .main-view .btn-showimg{
+    display: none;
+}
 
 .detail-fabric .container .img-detail .small-view::-webkit-scrollbar {
     display: none;  /* chorme */
@@ -195,7 +204,9 @@ h2.title span {
     height: 76px;
     /* margin-top: 12px; */
 }
-
+.detail-fabric .fabric-photos{
+    display: none;
+}
 .layout .detail-fabric .lable-general{
     margin-left: 94px;
 }
@@ -203,6 +214,7 @@ h2.title span {
 .layout .detail-fabric .lable-general .directory{
     gap: 4px;
     margin-top: 10px;
+    display: flex;
 }
 .layout .detail-fabric .lable-general .directory a{
     text-decoration: none;
@@ -220,6 +232,7 @@ h2.title span {
 
 .layout .detail-fabric .lable-general .lable-fabric{
     gap: 24px;
+    display: flex;
 }
 .layout .detail-fabric .lable-general .lable-fabric #code{
     font-family: "DP Céline";
@@ -228,7 +241,9 @@ h2.title span {
     letter-spacing: 2px;
     font-weight: 100 !important;
 }
-
+#line{
+    display: none;
+}
 .layout .detail-fabric .lable-general .lable-fabric #name{
     font-family: "DP Céline";
     font-size: 48px;
@@ -311,7 +326,7 @@ h2.title span {
     display: flex;
     justify-content: space-between;
     gap: 8px;
-    height: 205px;
+    height: max-content;
     margin-bottom: 80px;
 }
 
@@ -714,4 +729,416 @@ footer .footer-bottom p {
     position: absolute;
     width: auto;
     white-space: nowrap;
+}
+
+/**************************************************
+                MOBILE CSS AREA 
+****************************************************/
+@media (max-width: 768px) {
+    body {
+       background: var(--blue_bg);
+       width: 100%;
+    }
+    .sidebar {
+        display: none;
+    }
+
+    h2.title {
+        font-size: 28px;
+        line-height: 42px;
+        font-family: "DP Céline";
+        text-transform: uppercase;
+        font-weight: 100;
+        margin: 0;
+        letter-spacing: 2px;
+        z-index: 999;
+        pointer-events: none;
+    }
+    
+    h2.title span {
+        font-family: 'DP Céline';
+        font-size: 28px;
+        font-style: italic;
+        font-weight: 100;
+        line-height: 42px;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        z-index: 999;
+    }
+
+    .big-layout {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        background: url('../images/BG-items.webp');
+        background-color: #202E41;
+        background-size: cover;
+        background-repeat: no-repeat;
+        mix-blend-mode: lumino1sity !important;
+        overflow: hidden;
+    }
+    .layout{
+        width: 100%;
+        max-width: none;
+    }
+
+    /************************** Header ************************/
+    section.header{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    section.header .container{
+        width: 100%;
+    }
+    section.header .container .top_head{
+        /* display: flex;
+        justify-content: space-between; */
+        animation: none;
+    } 
+    section.header .container .top_head .logo img{
+        display: flex;
+        text-align: start;
+        margin-left: -10vw;
+        width: 36px;
+        height: 40px;
+    }
+    section.header #contact{
+        display: none;
+    }
+    .body_head {
+        padding: 10vh 0 2vh;
+        animation: none;
+    }
+    .top_head .menu_right{
+        gap: 10px;
+        justify-content: flex-end;
+        /* margin-left: 2vw; */
+    }
+    .header .logo #img-arrow-left{
+        display: flex;
+        margin-left: -15vw;
+    }
+    .header .logo #img-logo-ref{
+        display: none;
+    }
+    .header-temp{
+        display: none;
+        background-color: #202E41;
+        opacity: 0.8;
+        width: 100vw;
+        position: fixed;
+        top: 0;
+        left: 0;
+    }
+    .header-temp img{
+        width: 60px;
+        height: 40px;
+        margin-left: 2vw;
+    }
+    .body_head h1 {
+        font-size: 48px;
+        text-align: center;
+        /* text-transform: uppercase; */
+        font-family: "DP Céline";
+        letter-spacing: 2px;
+    }
+
+    .body_head span {
+        font-family: 'DP Céline';
+        font-size: 48px;
+        text-align: center;
+        font-style: italic;
+        font-weight: 100;
+        text-transform: uppercase;
+        margin-left: -8px;
+        margin-right: 6px;
+    }
+
+    .detail-fabric .container{
+        margin-top: 0px !important;
+    }
+    .detail-fabric .container .img-detail{
+        width: 100%;
+        height: fit-content;
+        margin-left: 0px;
+    }
+    .detail-fabric .container .img-detail .main-view{
+        width: 100vw;
+        height: fit-content;
+        padding: 0px;
+    }
+    .detail-fabric .container .img-detail .main-view img{
+        width: 100%;
+        height: fit-content;
+    }
+
+    .detail-fabric .container .img-detail .main-view .btn-showimg{
+        /* display: block; */
+        width: 60vw;
+        height: 24vh;
+        margin: -12vh 17vw;
+        padding-bottom: 19vh;
+        display: flex;
+        justify-content: center;
+    }
+    .main-view .btn-showimg img{
+        width: 24px !important;
+    }
+    .main-view .btn-showimg #btn-showimg{
+        background: #FFFFFFCC ;
+        border-color: #FFFFFFCC ;
+        color: #3B3229 ;
+        border-radius: 100px ;
+        font-size: 16px ;
+        letter-spacing: 1px ;
+        font-family: 'PlusJakartaSans-Medium';
+        font-weight: 600;
+        
+    }
+    .detail-fabric .container .img-detail .small-view{
+        display: none;
+    }
+    .detail-fabric .fabric-photos{
+        display: none;
+    }
+    .detail-fabric .fabric-photos .row{
+        margin-top: 2vh;
+        gap: 2vh;
+        overflow: scroll;
+    }
+    
+
+    .detail-fabric .lable-general{
+        margin-left: 0px !important;
+        margin-top: -10px !important;
+        display: flex;
+        padding: 0px;
+    }
+    .layout .detail-fabric .lable-general .directory{
+        display: none;
+    }
+    .layout .detail-fabric .lable-general .lable-fabric{
+        display: grid;
+        width: 60%;
+        /* padding-bottom: 3vh; */
+    }
+    .layout .detail-fabric .lable-general .btn0{
+        width: 40%;
+        margin-top: 2vh;
+    }
+    .layout .detail-fabric .lable-general .lable-fabric{
+        padding: 0px;
+    }
+    .layout .detail-fabric .lable-general .lable-fabric #code{
+        font-size: 28px;
+        /* margin-bottom: 2vh; */
+    }
+    .layout .detail-fabric .lable-general .lable-fabric #name{
+        font-size: 28px;
+    }
+
+    .download {
+        margin-top: -40px;
+        height: fit-content !important;
+    }
+    .download .download-item p{
+        width: 100vw;
+    }
+    .download .download-item{
+        margin-top: -1vh !important;
+    }
+
+    #line{
+        display: block;
+        width: 95vw;
+        height: 0px;
+        border: 1px solid rgba(253, 252, 245, 0.2);
+        margin-bottom: 5vh;
+        /* padding: 1vw 0px; */
+    }
+
+    .left-description{
+        width: 100%;
+        margin-left: 0px !important;
+        padding-left: 3vw !important;
+    }
+
+    .table-products #lable-samecollection {
+        font-size: 28px;
+        /* margin-top: 10vh; */
+        text-transform: uppercase;
+        width: 100vw;
+        padding-left: 3vw;
+        margin-top: 8vh;
+    }
+    .table-products .lable{
+        margin: 0 0 0 0 !important;
+    }
+
+    .table-products .container{
+        height: max-content;
+    }
+    .table-products .container .fabric-item{
+        width: 50vw;
+        gap: 10px;
+        margin-bottom: 2vh;
+        padding-left: 1vw ;
+        padding-right: 1vw;
+    }
+
+    /* footer */
+    footer #contact-mail, #contact-address, #contact-social{
+        padding: 5vh;
+        gap: 2vh;
+    }
+    footer .footer-bottom p {
+        font-size: 85px;
+    }
+    footer .footer-middle {
+        padding-top: 0vh;
+        padding-bottom: 0vh;
+    }
+
+    /* menu-area */
+    .menu-area {
+        position: absolute;
+        width: 100%;
+        height: auto;
+        top: 0;
+        /* left: 0; */
+        display: flex;
+        /* justify-content: center; */
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        background-color: #202E41;
+        opacity: 0;
+        transform: translateY(-100%);
+        transition: opacity 0.5s ease, transform 0.5s ease;
+        z-index: 1000;
+        overflow: hidden;
+    }
+    .menu-area .body-menu .menu-item {
+        display: grid;
+    }
+    .menu-area .header-menu .menu_right{
+        gap: 8px;
+        padding: 0;
+        margin-left: -12vw;
+    }
+    .menu-area .header-menu .logo{
+        display: flex;
+        justify-content: flex-start;
+        padding: 0;
+    }
+    .menu-area .body-menu {
+        margin: 10vh 10vw;
+    }
+    .body-menu .option-menu{
+        font-family: "DP Céline";
+        text-decoration: none;
+        font-size: 22px;
+        font-weight: 100;
+        line-height: 34px;
+        letter-spacing: 2px;
+        /* text-align: center; */
+        color: #BEB0A2;
+        margin-bottom: 24px;
+    }
+    .body-menu .a1, .a2, .a3{
+        width: 300px;
+    }
+    .header-menu .logo img{
+        width: 36px;
+        height: 40px;
+        margin-left: -6vw;
+    }
+
+    /************************** search-area ******************************/
+
+    .search-area {
+        position: absolute;
+        width: 100%;
+        height: auto;
+        top: 0;
+        /* left: 0; */
+        display: flex;
+        /* justify-content: center; */
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        background-color: #202E41;
+        opacity: 0;
+        transform: translateY(-100%);
+        transition: opacity 0.5s ease, transform 0.5s ease;
+        z-index: 1000;
+        overflow: hidden;
+    }
+
+    .search-area .header-search .menu_right{
+        gap: 8px;
+        padding: 0;
+        margin-left: -12vw;
+    }
+    .search-area .header-search .logo{
+        display: flex;
+        justify-content: flex-start;
+        padding: 0;
+    }
+    .header-search .logo img{
+        width: 36px;
+        height: 40px;
+        margin-left: -6vw;
+    }
+    .search-area .body-search {
+        margin: 10vh 10vw;
+    }
+    .body-search .option-menu{
+        font-family: "DP Céline";
+        text-decoration: none;
+        font-size: 48px;
+        font-weight: 100;
+        line-height: 72px;
+        letter-spacing: 2px;
+        /* text-align: center; */
+        color: #BEB0A2;
+        margin-bottom: 24px;
+    }
+    .body-search .input-group {
+        width: 654px;
+    }
+    .body-search .input-group input{
+        background-color: transparent;
+        border-width: 0px 0px 1px 0px;
+        border-radius: 0px;
+        border-color: #697586;
+        width: 655px;
+        height: 100px;
+        color: #FCFCFD;
+        font-size: 24px;
+        font-family: 'PlusJakartaSans-Light';
+    }
+    .body-search .input-group input::placeholder {
+        color: #697586;
+        font-size: 24px;
+        letter-spacing: 1%;
+        font-weight: 100;
+        opacity: 1; /* Firefox */
+    }
+    .body-search .input-group input::-ms-input-placeholder { /* Edge 12 -18 */
+        color: #697586;
+        font-size: 24px;
+        letter-spacing: 1%;
+        font-weight: 100;
+    }
+    .body-search h4{
+        font-weight: 500;
+        font-size: 16px;
+        letter-spacing: 1px;
+        margin-left: 15px;
+        /* font-family: 'PlusJakartaSans-Light'; */
+    }
+
+    
 }
