--- a/public/css/product-fabric-collection.css
+++ b/public/css/product-fabric-collection.css
@@ -913,9 +913,8 @@ footer .footer-bottom p {
         margin-top: -8vh;
     }
     .table-products .sum{
-        margin: -5vh 21vw;
+        margin: auto !important;
         width: max-content;
-        
     }
     .table-products .swiper-container{
         display: flex;
