update css v3 style

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1919,7 +1919,7 @@ footer .footer-bottom p {
         height: 100vh;
         padding: 20px 15px;
         background: #202E41;
-        overflow-y: scroll;
+        overflow-y: auto;
         overflow-x: hidden;
     }
 
@@ -1959,6 +1959,10 @@ footer .footer-bottom p {
         font-size: 16px;
         letter-spacing: 1px;
         margin-left: -8vw;
+    }
+
+    .layout .filter-bar .attributes {
+        margin-top: .5rem !important;
     }
 
     .filter-bar .filter-hidden {
