--- a/public/css/product-fabric-detail.css
+++ b/public/css/product-fabric-detail.css
@@ -123,7 +123,7 @@ h2.title span {
 }
 
 .detail-fabric .container .img-detail .main-view img {
-    width: 100%;
+    width: 888px;
     height: 500px;
     background: no-repeat;
     background-size: cover;
